--- a/less/style.less
+++ b/less/style.less
@@ -15,11 +15,6 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Federo', sans-serif;
 }
 
-body{
-    height: 3000px;
-    background-color: rebeccapurple;
-}
-
 .navbar-scroll{
     height: 100px;
     z-index: 999;
@@ -296,7 +291,7 @@ body{
                     position: relative;
                     
                     p{
-                        margin: 0 0 32 0;
+                        margin: 0;
                         overflow-wrap: break-word;
                         font-size: 18px;
                         font-weight: 400;
