--- a/less/style.less
+++ b/less/style.less
@@ -21,7 +21,9 @@ h1, h2, h3, h4, h5, h6{
 
 .navbar-scroll{
     height: 100px;
-    z-index: 999;
+    z-index: 100;
+    position: absolute;
+    width: 100%;
 
     &::before{
         content: '';
@@ -29,9 +31,9 @@ h1, h2, h3, h4, h5, h6{
         position: absolute;
         width: 100%;
         height: inherit;
-        background-color: #000;
         opacity: .8;
         z-index: -9;
+        border-bottom: 1px solid #C6C6C6;
     }
 
     .nav-wrapper_right{
@@ -84,7 +86,12 @@ h1, h2, h3, h4, h5, h6{
     height: 100px;
     background-color: #fff;
     z-index: 1;
-
+    
+    &.fixed-top{
+        transform: translateY(0);
+        visibility: visible;
+        z-index: 99;
+    }
 
     .nav-wrapper_right{
         .phone{
@@ -133,10 +140,162 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #hero-wrapper{
-    height: 100vh;
-    background: url(/images/hero@2x.jpg) center center no-repeat;
+    height: 66vh;
+    background: url(../images/hero@2x.jpg) center center no-repeat;
     background-size: cover;
     z-index: 99;
+    position: relative;
+    
+
+
+    @media (min-width: 768px) {
+        -webkit-animation: zoomIn 40s linear infinite;
+        animation: zoomIn 40s linear infinite;
+        position: relative;
+        transition: all 500ms ease;
+    
+        @keyframes zoomIn {
+            0% {
+                background-size: 160%;
+                transition: all 500ms ease;
+            }
+            100% {
+                background-size: 210%;
+                transition: all 500ms ease;
+            }
+        }
+    }
+
+    @media (min-width: 960px) {
+        height: 100vh;
+
+        @keyframes zoomIn {
+            0% {
+                background-size: 105%;
+                transition: all 500ms ease;
+            }
+            100% {
+                background-size: 135%;
+                transition: all 500ms ease;
+            }
+        }
+    }
+
+    .floating-area{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+
+       &::before{
+        content: '';
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        opacity: .7;
+        display: block;
+        position: absolute;
+       } 
+
+        ul.clients{
+            padding: 1em 0;
+            margin: 0;
+            display: flex;
+            flex-direction: row;
+            list-style: none;
+            justify-content: space-between;
+            z-index: 9;
+            position: relative;
+
+            
+            li{
+                max-height: 65px;
+                margin: auto 0;
+
+                img{
+                    width: 100%;
+                    height: auto;
+
+                    @media only screen and (min-width: 768px){
+                        width: 75%;
+                    } 
+
+                    @media only screen and (min-width: 992px){
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+    .hero-content{
+        padding: 10em 0 7em;
+        position: relative;
+
+        @media only screen and (min-width: 992px){
+            padding: 24vh 0 18vh;
+        }
+
+        h1{
+            font-size: 270%;
+            margin-bottom: .6em;
+
+            @media only screen and (min-width: 992px){
+                font-size: 350%;
+            }
+        }
+        
+        p{
+            font-weight: 1;
+            font-size: 125%;
+
+            @media only screen and (min-width: 992px){
+                font-size: 190%;
+            }
+        }
+
+        .buttons{
+            margin-top: 2em;
+
+            .btn{
+                color: #fff;
+                text-transform: uppercase;
+                font-weight: 700;
+                font-size: 70%;
+                padding: 0.8em 2em;
+                border-radius: 0;
+                transition: all 500ms ease;
+
+                @media only screen and (min-width: 992px){
+                    font-size: 80%;
+                    padding: 1.1em 3em;
+                }
+            }
+
+            .btn-blue{
+                background: var(--bt-blue);
+                margin-right: 6px;
+                
+
+                &:hover{
+                    background: var(--bt-green);
+                    transition: all 500ms ease;
+                }
+            }
+
+            .btn-white{
+                background: transparent;
+                border: 3px solid #fff;
+
+                &:hover{
+                    transition: all 500ms ease;
+                    background: #fff;
+                    color: #000;
+
+                }
+            }
+        }
+    }
+    
 }
 
 #welcome-Wrapper{
@@ -205,7 +364,7 @@ h1, h2, h3, h4, h5, h6{
                 transform: scale(1);
 
                &::before{
-                content: url(/images/experience.svg);
+                content: url(../images/experience.svg);
                }
             }
         }
@@ -303,7 +462,7 @@ h1, h2, h3, h4, h5, h6{
                     margin-right: 8px;
 
                     .icon-tick::before {
-                        content: url(/images/green-tick.svg);
+                        content: url(../images/green-tick.svg);
                         margin-right: 11px;
                         top: 7px;
                         position: relative;
@@ -341,7 +500,7 @@ h1, h2, h3, h4, h5, h6{
 
             .icon-craft{
                 &::before{
-                    content: url(/images/craft.svg);  
+                    content: url(../images/craft.svg);  
                 }
             }
 
@@ -369,12 +528,16 @@ h1, h2, h3, h4, h5, h6{
 
 #services-Wrapper{
     padding: 60px 0;
-    background: url(/images/services-bg.png), radial-gradient(farthest-side at 50% 46%, #274078, #14161D);
+    background: url(../images/services-bg.png), radial-gradient(farthest-side at 50% 46%, #274078, #14161D);
     // background: radial-gradient(ellipse at top, #14161D, transparent), radial-gradient(ellipse at bottom, #274078, transparent);
     // background-image: radial-gradient(farthest-corner at 40px 40px,#14161D 0%, #274078 100%);
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: bottom;
+
+    @media only screen and (min-width: 768px){
+        padding: 60px 30px;
+    }
 
     @media only screen and (min-width: 992px){
         padding: 120px 0 82px;
@@ -442,7 +605,7 @@ h1, h2, h3, h4, h5, h6{
                     position: relative;
 
                     &::before{
-                        content: url(/images/tick-small.svg);
+                        content: url(../images/tick-small.svg);
                         margin-right: 10px;
                         position: absolute;
                     }
@@ -462,7 +625,7 @@ h1, h2, h3, h4, h5, h6{
 
             div.arrow{
                 height: 12px;
-                background: url(/images/arrow-right.svg) left center no-repeat;
+                background: url(../images/arrow-right.svg) left center no-repeat;
                 margin-top: 20px;
                 position: absolute;
                 width: 38px;
@@ -474,7 +637,7 @@ h1, h2, h3, h4, h5, h6{
             &:hover{
                 transition: all 500ms ease;
                 div.arrow{
-                    background: url(/images/arrow-right-green.svg) left center no-repeat;
+                    background: url(../images/arrow-right-green.svg) left center no-repeat;
                     transition: all 500ms ease;
                 }
 
@@ -510,7 +673,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #portfolio-wrapper{
-    background: linear-gradient(to bottom, transparent 50%, #F5F4F4 50%), url(/images/portfolio-bg@2x.png);
+    background: linear-gradient(to bottom, transparent 50%, #F5F4F4 50%), url(../images/portfolio-bg@2x.png);
     // background-attachment: fixed;
     padding: 60px 0;
 
@@ -543,7 +706,7 @@ h1, h2, h3, h4, h5, h6{
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 1.5em;
-            background: url('../images/portfolio-mesh.png')center center repeat-x, #fff;
+            background: url('..../images/portfolio-mesh.png')center center repeat-x, #fff;
         }
 
         @media only screen and (min-width: 992px){
@@ -627,5 +790,205 @@ h1, h2, h3, h4, h5, h6{
             }
         }
         
+    }
+}
+
+footer{
+    background-color: #14161D;
+
+    .footer-upper{
+        padding: 20px 0 0;
+
+        @media only screen and (min-width: 768px){
+            padding: 40px 0 30px;
+            background: url(../images/footer-top-bg@2x.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+        }
+
+        @media only screen and (min-width: 992px){
+            padding: 45px 0;
+        }
+
+        h5{
+            text-align: center;
+            text-transform: uppercase;
+
+            @media only screen and (min-width: 768px){
+                text-align: left;
+            }
+        }
+
+        p{
+            text-align: center;
+
+            @media only screen and (min-width: 768px){
+                text-align: left;
+            }
+            
+            a{
+                text-decoration: none;
+                color: var(--bt-green);
+            }
+        }
+
+        ul.socials{
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            list-style: none;
+            width: 26%;
+            margin: 1em auto;
+
+            @media only screen and (min-width: 768px){
+                margin: .5em 0 0 auto;
+            }
+            
+            li{
+                a{
+                    color: #fff;
+                    font-size: 18px;
+                    transition: all 500ms ease;
+
+                    @media only screen and (min-width: 992px){
+                        font-size: 22px;
+                        transition: all 500ms ease;
+                    }
+
+                    &:hover{
+                        color: var(--bt-orange);
+                    }
+                }
+            }
+        }
+    }
+
+    .footer-middle{
+        padding: 20px 0;
+
+        @media only screen and (min-width: 768px){
+            padding: 40px 0;
+        }
+
+        @media only screen and (min-width: 992px){
+            padding: 55px 0;
+        }
+
+        h4{
+            color: #fff;
+            margin-bottom: 1em;
+            text-transform: uppercase;
+        }
+
+        ul{
+            padding: 0;
+            list-style: none;
+            display: grid;
+
+            li{
+                p{
+                    color: #999999;
+                }
+
+                a{
+                    text-decoration: none;
+                    color: #999999;
+                    transition: all 500ms ease;
+
+                    &:hover{
+                        color: #fff;
+                        transition: all 500ms ease;
+                    }
+                }
+
+                i{
+                    color: #D8D6D6;
+                }
+            }
+        }
+
+        .contacts{
+            ul{
+                li{
+                    display: grid;
+                    grid-template-columns: 1fr 10fr;
+                }
+            }
+        }
+
+        .links{
+            ul{
+                -moz-column-count: 2;
+                -moz-column-gap: 40px;
+                -webkit-column-count: 2;
+                -webkit-column-gap: 40px;
+                column-count: 2;
+                column-gap: 40px;
+                display: block;
+
+                @media only screen and (min-width: 992px){
+                    column-gap: 80px;
+                    -moz-column-gap: 80px;
+                    -webkit-column-gap: 80px;
+                }
+
+                li{ 
+                    @media only screen and (min-width: 992px){
+                        margin-bottom: 10px;
+                        min-width: 180px;
+                    }
+                }
+            }
+        }
+
+        .image{
+            width: 30%;
+            margin: 1em auto;
+
+            @media only screen and (min-width: 768px){
+                margin: 1em 0 0 auto;
+                width: 70%;
+            }
+
+            @media only screen and (min-width: 992px){
+                margin: 0 0 0 auto;
+                width: 55%;
+            }
+
+            img{
+                width: 100%;
+            }
+        }
+    }
+
+    .footer-lower{
+        padding: 30px 0;
+        border-top: 1px solid #585858;
+
+
+        p{
+            color: #D8D6D6;
+            text-align: center;
+            font-size: 84%;
+
+            em{
+                font-style: normal;
+                color: var(--bt-orange);
+            }
+
+            &.copyright{
+                @media only screen and (min-width: 768px){
+                    text-align: left;
+                }
+            }
+
+            &.disclaimer{
+                @media only screen and (min-width: 768px){
+                    text-align: right;
+                }
+            }
+        }
     }
 }
